Mon Dec 17 13:56:55 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (io_flush_buffer_sync2): avoid to return 0. because
	  rb_thread_call_without_gvl2 uses 0 internally.
	* io.c (io_flush_buffer_async2): adapt the above.

Mon Dec 17 12:05:32 2012  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/methods.rdoc:  Added a description of singleton methods.

Mon Dec 17 11:35:57 2012  Eric Hodel  <drbrain@segment7.net>

	* doc/.document:  Added doc/syntax

Mon Dec 17 11:25:32 2012  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax.rdoc:  Added syntax guide table of contents
	* doc/syntax/exceptions.rdoc:  Syntax guide for exceptions
	* doc/syntax/literals.rdoc:  Syntax guide for literals
	* doc/syntax/methods.rdoc:  Syntax guide for methods

Mon Dec 17 07:59:40 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Updated VERSION

	* test/rubygems/test_gem_installer.rb:  Fixed ambiguous first argument
	  warning.

	* test/rubygems/test_gem_rdoc.rb:  RDoc generation depends on installed
	  version of RDoc.

Sun Dec 16 02:04:41 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (rb_sigaltstack_size): cast sysconf() return value
	  explicitly. Fix compile error on Mac OS X.

Sun Dec 16 00:39:43 2012  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* cont.c (rb_fiber_start): don't enqueue Qnil to async_errinfo_queue.
	  rb_vm_make_jump_tag_but_local_jump() could return Qnil (ex. when
	  finished by Thread.exit). [ruby-dev:45218] [Bug #5993]

	* test/ruby/test_fiber.rb (test_exit_in_fiber): add test for it.

Sat Dec 15 23:56:51 2012  Naohisa Goto  <ngotogenome@gmail.com>

	* ext/fiddle/pointer.c (rb_fiddle_ptr2cptr): fix error message
	  forgotten to be changed from DL to Fiddle.

Sat Dec 15 23:14:32 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (default_handler): remove rb_register_sigaltstack()
	  call. sigaltstack was already registered when creating threads.
